#include_directories(C://lib//fmt//include)

string(REPLACE ";" " " LIB_SRC_LIST "${LIB_SRC}")

message(STATUS "${LIB_SRC_LIST}")
#add_executable(deque-test deque-test.cc ${LIB_SRC})
#add_executable(test_queue test_queue.cpp ${LIB_SRC})
add_executable(vector-test vector-test.cc ${LIB_SRC})
#add_executable(test_algo test_algo.cpp ${LIB_SRC})
#add_executable(test_hashtable test_hashtable.cpp ${LIB_SRC})
#add_executable(test_other test_other.cpp ${LIB_SRC})
#add_executable(rbtree rbtree.cc ${LIB_SRC})
#add_executable(typelist typelist.cc ${LIB_SRC})
#add_executable(tuple tuple.cc ${LIB_SRC})
#add_executable(variant variant.cc ${LIB_SRC})
#add_executable(rbtree-test rbtree-test.cc ${LIB_SRC})
#add_executable(algobase_test algobase_test.cc)
#add_executable(set-test set-test.cc ${LIB_SRC})
